--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-snowfall": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
